--- a/style.css
+++ b/style.css
@@ -15,11 +15,25 @@ body {
   transform-box: fill-box;
 }
 
+#man-bike {
+  animation: bike 1s ease-in-out infinite alternate;
+  transform-origin: bottom;
+}
+
 @keyframes wheel {
   from{
     transform: rotateZ(0deg);
   }
   to{
     transform: rotateZ(360deg);
+  }
+}
+
+@keyframes bike {
+  from {
+    transform: rotateX(0deg);
+  }
+  to {
+    transform: rotateX(20deg);
   }
 }
