--- a/style.css
+++ b/style.css
@@ -20,6 +20,12 @@ body {
   transform-origin: bottom;
 }
 
+#hat {
+  animation: hat 1s ease-in-out infinite alternate;
+  transform-origin: center;
+  transform-box: fill-box;
+}
+
 @keyframes wheel {
   from{
     transform: rotateZ(0deg);
@@ -35,5 +41,14 @@ body {
   }
   to {
     transform: rotateX(20deg);
+  }
+}
+
+@keyframes hat {
+  from {
+    transform: translateY(0%) rotateZ(0deg);
+  }
+  to {
+    transform: translateY(40%) rotateZ(20deg);
   }
 }
